# emacs-ng

./: .dockerignore  .envrc  .gitignore  .gitmodules  404.html  Architecture.md  Cargo.in  Cargo.toml  DENO_README.md  JS_README.md  Makefile.in  README.md  adv-features.md  autogen.sh  build_emacs_ng.sh  configure.ac  faq.md  flake.nix  generate-docs.sh  getting-started.md  index.html  make-dist  manifest.scm  mkdocs.yml  rust-toolchain  rustfmt.toml  sitemap.xml  using-deno.md
crates/codegen/: Cargo.toml  data.rs  error.rs  lib.rs
crates/codegen/etc/: build.rs
crates/emacs-sys/: Cargo.toml  build.rs.in  wrapper.h
crates/emacs-sys/src/: color.rs  display_info.rs  eval.rs  eval_macros.rs  frame.rs  lib.rs  lisp.rs  obarray.rs  output.rs  process.rs  symbol.rs  sys.rs  terminal.rs  vector.rs  vector_macros.rs
crates/emacs-sys/src/display_traits/: face.rs  glyph.rs  glyph_string.rs  mod.rs
crates/emacs-sys/src/gfx/: context.rs
crates/emacs-sys/src/gfx/context_impl/: glutin.rs  gtk3.rs
crates/emacs-sys/src/window_system/: mod.rs  pgtk.rs  winit.rs
crates/emacsng/: Cargo.toml  build.rs
crates/font/: Cargo.toml  build.rs
crates/font/src/: cache.rs  fns.rs  lib.rs
crates/git/: Cargo.toml  build.rs
crates/git/src/: lib.rs  repository.rs
crates/js/: Cargo.toml
crates/js/src/: javascript.rs  lib.rs  prelim.js  subcommands.rs
crates/lisp-async/: Cargo.toml
crates/lisp-async/src/: fns.rs  lib.rs
crates/lisp-doc/: Cargo.toml  README.md  docfile.rs  files.rs  lib.rs  math.rs
crates/lisp-macros/: Cargo.toml  function.rs  lib.rs
crates/lisp-source/: Cargo.toml
crates/lisp-source/src/: main.rs
crates/lisp-util/: Cargo.toml  attributes.rs  lib.rs
crates/lsp-json/: Cargo.toml
crates/lsp-json/src/: lib.rs  parsing.rs
crates/ng-module/: Cargo.toml
crates/ng-module/src/: lib.rs  ng_module.rs
crates/pgtk/: Cargo.toml
crates/pgtk/src/: lib.rs
crates/webrender/: Cargo.toml  build.rs
crates/webrender/src/: color.rs  cursor.rs  display_info.rs  face.rs  fns.rs  frame.rs  fringe.rs  glyph.rs  lib.rs  output.rs
crates/webrender/src/image/: cache.rs  mod.rs
crates/winit/: Cargo.toml  build.rs
crates/winit-term/: Cargo.toml  build.rs
crates/winit-term/src/: cursor.rs  fns.rs  frame.rs  term.rs
crates/winit/src/: event.rs  fns.rs  frame.rs  input.rs  lib.rs  term.rs
remacs-generated/: Cargo.toml
remacs-generated/src/: lib.rs  lisp.rs  multibyte.rs  numbers.rs
rust_src/: .gitignore  Cargo.toml  Cargo.toml.in  build.rs  lib.rs  wrapper.h
rust_src/crates/bindings/: Cargo.toml
rust_src/crates/emacs/: .gitignore  Cargo.toml  build.rs.in  wrapper.h
rust_src/crates/emacs/src/: bindings.rs  buffer.rs  composite.rs  definitions.rs  display_info.rs  eval.rs  eval_macros.rs  font.rs  frame.rs  globals.rs  glyph.rs  keyboard.rs  lglyph.rs  lib.rs  lisp.rs  list.rs  multibyte.rs  number.rs  obarray.rs  output.rs  process.rs  string.rs  symbol.rs  sys.rs  terminal.rs  thread.rs  vector.rs  window.rs  xdisp.rs
rust_src/crates/emacs/src/display_traits/: face.rs  glyph_string.rs  mod.rs
rust_src/crates/emacs/src/window_system/: mod.rs  pgtk.rs  winit.rs
rust_src/crates/font/: Cargo.toml  build.rs
rust_src/crates/font/src/: cache.rs  font_db.rs  lib.rs
rust_src/crates/git/: Cargo.toml  build.rs
rust_src/crates/git/src/: blame.rs  lib.rs  repository.rs
rust_src/crates/gl-renderer/: Cargo.toml  build.rs
rust_src/crates/gl-renderer/src/: cursor.rs  display_info.rs  frame.rs  fringe.rs  gl_renderer.rs  glyph.rs  image.rs  image_cache.rs  lib.rs  output.rs  texture.rs
rust_src/crates/js/: Cargo.toml
rust_src/crates/js/src/: javascript.rs  lib.rs  prelim.js  subcommands.rs
rust_src/crates/lisp/: Cargo.toml
rust_src/crates/lisp/src/: buffer.rs  eval.rs  eval_macros.rs  font.rs  frame.rs  glyph.rs  keyboard.rs  lib.rs  lisp.rs  list.rs  multibyte.rs  number.rs  numbers.rs  obarray.rs  process.rs  remacs_sys.rs  string.rs  symbol.rs  thread.rs  vector.rs  vector_macros.rs  window.rs  windows.rs
rust_src/crates/lisp_macros/: Cargo.toml  lib.rs
rust_src/crates/lisp_util/: Cargo.toml  attributes.rs  lib.rs
rust_src/crates/lsp_client/: Cargo.toml
rust_src/crates/lsp_client/src/: client.rs  lib.rs
rust_src/crates/lsp_json/: Cargo.toml
rust_src/crates/lsp_json/src/: lib.rs  parsing.rs
rust_src/crates/ng_async/: Cargo.toml  build.rs
rust_src/crates/ng_async/src/: lib.rs  ng_async.rs  parsing.rs
rust_src/crates/ng_module/: Cargo.toml
rust_src/crates/ng_module/src/: lib.rs  ng_module.rs
rust_src/crates/webrender/: .gitignore  Cargo.in  Cargo.toml  build.rs
rust_src/crates/webrender/src/: color.rs  cursor.rs  display_info.rs  draw_canvas.rs  event.rs  event_loop.rs  font.rs  font_db.rs  frame.rs  fringe.rs  future.rs  image.rs  image_cache.rs  input.rs  lib.rs  mod.rs  output.rs  term.rs  texture.rs  util.rs  wrterm.rs
rust_src/crates/winit-term/: Cargo.toml  build.rs
rust_src/crates/winit-term/src/: clipboard.rs  cursor.rs  event.rs  fns.rs  frame.rs  input.rs  lib.rs  output.rs  term.rs  wrterm.rs
rust_src/ng-bindgen/: Cargo.toml  lib.rs
rust_src/ng-bindgen/src/: main.rs
rust_src/ng-docfile/: Cargo.toml  docfile.rs
rust_src/remacs-bindings/: Cargo.toml
rust_src/remacs-bindings/src/: main.rs
rust_src/remacs-lib/: Cargo.toml  README.md  docfile.rs  files.rs  lib.rs
rust_src/remacs-macros/: lib.rs
rust_src/src/: alloc.rs  base64.rs  buffers.rs  bytecode.rs  callint.rs  callproc.rs  casefiddle.rs  casetab.rs  category.rs  character.rs  charset.rs  chartable.rs  cmds.rs  coding.rs  data.rs  decompress.rs  dired.rs  dired_unix.rs  dired_windows.rs  dispnew.rs  editfns.rs  emacs.rs  eval.rs  eval_macros.rs  fastjsonrpc.rs  ffi.rs  fileio.rs  filelock.rs  floatfns.rs  fns.rs  fonts.rs  frame.rs  frames.rs  functions.rs  git.rs  hashtable.rs  indent.rs  interactive.rs  javascript.rs  javascript_stubs.rs  (+44 more)
rust_src/src/crypto/: mod.rs
rust_src/src/webrender_backend/: color.rs  cursor.rs  display_info.rs  draw_canvas.rs  event.rs  font.rs  frame.rs  image.rs  input.rs  keyboard.rs  mod.rs  output.rs  term.rs
(+209 files in other folders)
