[workspace]
members = ["crates/*"]
resolver = "2"
default-members = ["crates/emacsng"]

[workspace.dependencies]
libc = "0.2"
log = "0.4"
errno = "0.3"
gtk = "0.18"
gdk = "0.18"
gtk-sys = "0.18"
gdk-sys = "0.18"
gdkwayland-sys = "0.18"
gdkx11-sys = "0.18"
parking_lot = "0.12"
fxhash = "0.2"
raw-window-handle = "0.6"
image = "0.24"
cfg_aliases = "0.2"
gleam = "0.15"
winit = { version = "0.29", default-features = false, features = ["rwh_06"]}
arboard = "3.3"
euclid = "0.22"
lazy_static = "1.4"
tokio = "1"
regex = "1.10"
syn = "2"
quote = "1.0"
proc-macro2 = "1.0"

[workspace.dependencies.webrender]
git = "https://github.com/declantsien/webrender.git"
rev = "6766059a74135ee6ff26fd4f0f1f25db5c8e772e"
default-features = false

[workspace.dependencies.webrender_api]
git = "https://github.com/declantsien/webrender.git"
rev = "6766059a74135ee6ff26fd4f0f1f25db5c8e772e"
default-features = false

# Allow unwinding in functions called from C. See
# https://www.reddit.com/r/rust/comments/565q1f/wrote_a_blogpost_from_my_experiences_the_arduous/d8h053m/
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
# This reduces the binary size from 125M to 70M due
# to Deno inclusion
opt-level = 'z' # Optimize for size

### Patches

# fontconfig font dirs patch
[patch.crates-io.font-loader]
git = "https://github.com/declantsien/rust-font-loader.git"
rev = "9e1776052d906f6cd3b78aa701ffb2d657877830"

# surfman raw-window-handle 0.6
[patch.crates-io.surfman]
git = "https://github.com/declantsien/surfman.git"
rev = "51ac8db9f4584bcad9d8223103386bd05c5f2048"

# glutin raw-window-handle 0.6
[patch.crates-io.glutin]
git = "https://github.com/declantsien/glutin.git"
rev = "92a5ab0cc907ab3e1095ec6a09356aff8d93ade8"
