[package]
name = "remacs-generated"
version = "0.1.0"
description = "Remacs Generated"
edition = "2018"

[lib]

[dependencies]
remacs-lib = { version = "0.1.0", path = "../rust_src/remacs-lib" }
remacs-macros = { version = "0.1.0", path = "../rust_src/remacs-macros" }
base64 = "0.10.0"
clippy = { version = "*", optional = true }
cfg-if = "0.1"
errno = "0.2"
field-offset = "0.1"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
itertools = "0.8"
lazy_static = "1.2"
libc = "0.2"
line-wrap = "0.1.1"
md5 = "0.6"
rand = "0.6.5"
sha1 = "0.6"
sha2 = "0.8"
systemstat = "0.1"
