[package]
name = "codegen"
description = "Create c_exports.rs that holds a crate's generated bindings"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.154"
regex = "1.10"
cargo_metadata = { version = "0.18", optional = false }
cargo-files-core = { version = "0.2", optional = false }
thiserror = "1.0"
anyhow = "1.0"

[lib]
path = "lib.rs"

[[bin]]
name = "print-source"
path = "bin/print_source.rs"

[features]
