### Root package
[package]
authors = ["emacs-ng members"]
name = "emacsng"
description = "Experimental emacs fork"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"
build = "../codegen/etc/build.rs"

[dependencies]
libc = "0.2"
emacs-sys.path = "../emacs-sys"
lisp-async.path = "../lisp-async"
lsp-json.path = "../lsp-json"
git = { path = "../git", optional = true }
ng-module = { path = "../ng-module", optional = true }
js = { path = "../js", optional = true }
winit = { path = "../winit-term", optional = true, default-features = false }
pgtk = { path = "../pgtk", optional = true, default-features = false }
clippy = { version = "*", optional = true }
log.workspace = true
tracing = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = [
  "matchers",
  "regex",
  "once_cell",
  "tracing",
  "std",
  "thread_local",
  "env-filter"
]

[build-dependencies]
codegen = { path = "../codegen" }

[lib]
crate-type = ["staticlib"]
path = "./lib.rs"

[features]

# Compile with C xml2 library support.
use-xml2 = []
window-system-pgtk=["dep:pgtk"]
wr_pgtk=["window-system-pgtk", "pgtk/webrender"]
window-system-winit = ["dep:winit"]
# Build with git2rs support
libgit = ["git"]
# Treat warnings as a build error on Travis.
strict = []
# Use JavaScript and Deno
javascript = ["dep:js"]
# Build with dynamic modules support's extensions.
ng-module = ["dep:ng-module"]

# Enable glyphs debugging code.
# !!! Avoid using feature selection ? like below, the codegen
# from lisp-util is not smart enought yet to figure out when winit
# or pgtk should be enable or not
# glyph-debug = ["winit?/capture", "pgtk?/capture"]
# profiling = ["winit?/profiling", "pgtk?/profiling"]
