[package]
name = "git"
version = "0.1.0"
edition = "2021"
build = "../codegen/etc/build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
emacs-sys.path = "../emacs-sys"
lisp-macros.path = "../lisp-macros"
lisp-util.path = "../lisp-util"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9" }
git2 = "0.18"
libc.workspace = true

[build-dependencies]
codegen = { path = "../codegen" }