[package]
name = "js"
version = "0.1.0"
edition = "2021"
build = "../codegen/etc/build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
emacs-sys.path = "../emacs-sys"
lisp-macros.path = "../lisp-macros"
lisp-util.path = "../lisp-util"
lsp-json.path = "../lsp-json"
libc.workspace = true
futures = "0.3"
# deno_core = { git = "https://github.com/emacs-ng/deno", branch = "emacs-ng" }
# deno_runtime = { git = "https://github.com/emacs-ng/deno", branch = "emacs-ng" }
# deno = { git = "https://github.com/emacs-ng/deno", branch = "emacs-ng" }
serde_json = { version = "1.0", features = ["preserve_order"] }
rusty_v8 = "0.32"
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.25"

[build-dependencies]
codegen = { path = "../codegen" }