[package]
name = "lisp-macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp native functions."
edition = "2021"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "1.0"
syn = { workspace = true, features = ["full"] }
lisp-util.path = "../lisp-util"
emacs-sys.path = "../emacs-sys"
regex.workspace = true
proc-macro2.workspace = true
darling = "0.20"
