[package]
name = "lsp-json"
version = "0.1.0"
edition = "2021"
build = "../codegen/etc/build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
lisp-async.path = "../lisp-async"
emacs-sys.path = "../emacs-sys"
lisp-macros.path = "../lisp-macros"
lisp-util.path = "../lisp-util"
libc.workspace = true
lsp-server = "0.7"
serde_json = { version = "1.0", features = ["preserve_order"] }

[build-dependencies]
codegen = { path = "../codegen" }