[package]
name = "ng-module"
version = "0.1.0"
edition = "2021"
build = "../codegen/etc/build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
emacs-sys.path = "../emacs-sys"
lisp-macros.path = "../lisp-macros"
lisp-util.path = "../lisp-util"
libc.workspace = true

[build-dependencies]
codegen = { path = "../codegen" }