[package]
name = "webrender"
description = "Emacs draw api using Rust crate webrender"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
emacs-sys.path = "../emacs-sys"
font.path = "../font"
lisp-macros.path = "../lisp-macros"
lisp-util.path = "../lisp-util"
winit-term = { path = "../winit-term", optional = true }
log.workspace = true
libc.workspace = true
lazy_static = "1.4"
gleam.workspace = true
image.workspace = true
bit-vec = "0.6.3"
raw-window-handle.workspace = true
euclid.workspace = true
parking_lot.workspace = true
webrender = { workspace = true, features = ["font_backend_swash"] }

[build-dependencies]
codegen = { path = "../codegen" }
cfg_aliases.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[features]
capture=["webrender/capture", "webrender/serialize_program"]
profiling=["webrender/profiler"]
sw_compositor=["webrender/sw_compositor"]
