[package]
name = "winit-term"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
emacs-sys = { path = "../emacs-sys", features = ["window-system-winit"] }
lisp-macros = { path = "../lisp-macros" }
lisp-util = {  path = "../lisp-util" }
font = {  path = "../font" }
colors = {  path = "../colors" }
webrender_api = { workspace = true}
log.workspace = true
libc.workspace = true
lazy_static = "1.4"
app_units = "0.7"
bit-vec = "0.6.3"
raw-window-handle.workspace = true
winit.workspace = true
spin_sleep = "1.2"

[build-dependencies]
codegen = { path = "../codegen" }
cfg_aliases.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
