[package]
name = "ng-docfile"
version = "0.1.0"
edition = "2018"

[dependencies]
lisp-util = { version = "0.1.0", path = "../crates/lisp_util" }
errno = "0.2"
lazy_static = "1.2"
libc = "0.2"
regex = "1.1"

[lib]
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[features]
# Treat warnings as a build error on Travis.
strict = []
