[package]
name = "remacs-lib"
version = "0.1.0"
edition = "2018"

[dependencies]
lisp-util = { version = "0.1.0", path = "../crates/lisp_util" }
darling = "0.13.0"
errno = "0.2.7"
lazy_static = "1.4.0"
libc = "0.2.101"
rand = "0.8.4"
regex = "1.4.3"
time = "0.3.2"

[lib]
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[features]
# Treat warnings as a build error on Travis.
strict = []
