[package]
name = "remacs-lib"
version = "0.1.0"
edition = "2018"

[dependencies]
lisp-util = { version = "0.1.0", path = "../crates/lisp_util" }
darling = "0.2"
errno.workspace = true
lazy_static.workspace = true
libc.workspace = true
rand = "0.8.5"
regex = "1.1"
time = "0.1"

[lib]
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[features]
# Treat warnings as a build error on Travis.
strict = []
