[package]
name = "emacs"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2.95"
lazy_static = "1.4.0"
log = "0.4"
memoffset = "0.6.4"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
gtk-sys = { version = "0.16", optional = true }

[build-dependencies]
bindgen = "0.64"
regex = "1.6"
libc = "0.2"

[features]
window-system = []
window-system-winit = [ "window-system"]
window-system-pgtk = [ "window-system", "dep:gtk-sys"]
