[package]
name = "git"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
emacs = { version = "0.1.0", path = "../emacs" }
lisp-macros = { version = "0.1.0", path = "../lisp_macros" }
lisp-util = { version = "0.1.0", path = "../lisp_util" }
openssl = { version = "0.10.36", features = ["vendored"] }
openssl-sys = "0.9.66"
git2 = "0.13.21"
libc = "0.2.101"
lazy_static = "1.4.0"
