[package]
name = "gl-renderer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
emacs = { path = "../emacs" }
font = { path = "../font" }
lisp-macros = { path = "../lisp_macros" }
lisp-util = {  path = "../lisp_util" }
winit-term = {  path = "../winit-term", optional = true }
log.workspace = true
libc.workspace = true
lazy_static = "1.4"
gleam.workspace = true
image.workspace = true
bit-vec = "0.6.3"
raw-window-handle.workspace = true
euclid.workspace = true
tiny-skia = "0.8"
parking_lot.workspace = true
webrender = { workspace = true, features = ["font_backend_swash"] }

[build-dependencies]
ng-bindgen = { path = "../../ng-bindgen" }
cfg_aliases.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"


[features]
capture=["webrender/capture", "webrender/serialize_program"]
profiling=["webrender/profiler"]
sw_compositor=["webrender/sw_compositor"]
