[package]
name = "js"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
emacs = { version = "0.1.0", path = "../emacs" }
lisp-macros = { version = "0.1.0", path = "../lisp_macros" }
lisp-util = { version = "0.1.0", path = "../lisp_util" }
lsp_json = { version = "0.1.0", path = "../lsp_json" }
libc = "0.2.95"
lazy_static = "1.2"
futures = "0.3"
deno = { path = "../../../../deno/cli" }
# deno_core = { git = "https://github.com/emacs-ng/deno", branch = "emacs-ng" }
# deno_runtime = { git = "https://github.com/emacs-ng/deno", branch = "emacs-ng" }
# deno = { git = "https://github.com/emacs-ng/deno", branch = "emacs-ng" }
serde_json = { version = "1.0", features = ["preserve_order"] }
# rusty_v8 = "0.22.1"
v8 = { version = "0.62.2", default-features = false }
# tokio = { version = "1.4.0", features = ["full"] }
# tokio-rustls = "0.22.0"
tokio = { version = "=1.24.2", features = ["full"] }
tokio-rustls = "0.23.3"

[build-dependencies]
ng-bindgen = { path = "../../ng-bindgen" }