[package]
name = "js"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
emacs = { version = "0.1.0", path = "../emacs" }
lisp-macros = { version = "0.1.0", path = "../lisp_macros" }
lisp-util = { version = "0.1.0", path = "../lisp_util" }
lsp_json = { version = "0.1.0", path = "../lsp_json" }
libc.workspace = true
lazy_static.workspace = true
futures = "0.3"
# deno_core = { git = "https://github.com/emacs-ng/deno", branch = "emacs-ng" }
# deno_runtime = { git = "https://github.com/emacs-ng/deno", branch = "emacs-ng" }
# deno = { git = "https://github.com/emacs-ng/deno", branch = "emacs-ng" }
serde_json = { version = "1.0", features = ["preserve_order"] }
rusty_v8 = "0.32"
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.25"

[build-dependencies]
ng-bindgen = { path = "../../ng-bindgen" }