[package]
name = "lisp-macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp native functions."
edition = "2018"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "0.6"
syn = { version = "0.15.26", features = ["full"] }
lisp-util = { version = "0.1.0", path = "../lisp_util" }
emacs = { version = "0.1.0", path = "../emacs" }
regex = "1.4.3"
lazy_static = "1.4.0"
proc-macro2 = "0.4"
