[package]
name = "lisp-macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp native functions."
edition = "2018"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "0.15.26", features = ["full"] }
lisp-util = { version = "0.1.0", path = "../lisp_util" }
emacs = { version = "0.1.0", path = "../emacs" }
regex.workspace = true
lazy_static.workspace = true
proc-macro2 = "0.4"
